fix: header center alignment issue

--- a/src/Components/CueTemplateComponent.css
+++ b/src/Components/CueTemplateComponent.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 50px;
     min-height: 50px;
-    background-color: #666666;
+    background-color: var(--application-header-color);
 
     display: flex;
     justify-content: center;
